# kolosal-server

./: .gitignore  .gitmodules  AGENT_DEMO_README.md  CMakeLists.txt  CMakeSettings.json  COMBINED_METRICS_ROUTE_IMPLEMENTATION.md  COMPLETION_METRICS_ROUTE_UPDATES.md  DOCUMENTATION_UPDATES.md  Dockerfile  Dockerfile.alpine  Dockerfile.distroless  Dockerfile.production  Dockerfile.runtime  README.md  SEQUENTIAL_WORKFLOW_README.md  agent_demo.py  agent_response_test.py  cli_chat.py  config.example.json  config.example.yaml  config.json  config.yaml  example_agent_response_test.py  kolosal-server.service  sequential_workflow_demo.py  sequential_workflow_demo_updated.py  simple_demo.py  simple_workflow_client.py  test-config.yaml  test_agent_by_id.py  test_agent_functions.py  test_agents.py  test_gpu_monitor.cpp  test_kolosal_server.py  test_logging_demo.py  test_metrics_endpoints.py  test_url_download.py
config/: agents.yaml
docker-runtime/: config.yaml  kolosal-server
docs/: ADDING_MODELS.md  ADDING_ROUTES.md  AGENTS.md  AGENT_SYSTEM_API.md  API_SPECIFICATION.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  DOWNLOAD_PROGRESS_API.md  PRODUCTION_DEPLOYMENT.md  PUBLIC_ACCESS.md  README.md  SYSTEM_MONITORING.md  add_engine_dto_model.md  dto_models_implementation_summary.md  models_route_removal_summary.md  remove_engine_dto_model.md
examples/: simple.cpp  test_api_key_auth.py
include/: inference.h  inference_interface.h  kolosal_server.hpp  logger.hpp  server.hpp  utils.hpp
include/kolosal/: auth.hpp  auto_setup_manager.hpp  completion_monitor.hpp  document_service.hpp  download_manager.hpp  download_utils.hpp  enhanced_gpu_monitor.hpp  export.hpp  logger.hpp  metrics_converter.hpp  node_manager.h  qdrant_client.hpp  server.hpp  server_api.hpp  server_config.hpp  system_monitor.hpp  utils.hpp
include/kolosal/agents/: agent_core.hpp  agent_data.hpp  agent_interfaces.hpp  agent_orchestrator.hpp  builtin_functions.hpp  event_system.hpp  function_manager.hpp  job_manager.hpp  logger.hpp  message_router.hpp  multi_agent_system.hpp  sequential_workflow.hpp  server_logger_adapter.hpp  yaml_config.hpp
include/kolosal/auth/: auth_middleware.hpp  cors_handler.hpp  rate_limiter.hpp
include/kolosal/models/: add_documents_model.hpp  add_engine_request_model.hpp  add_engine_response_model.hpp  chat_message_model.hpp  chat_request_model.hpp  chat_response_chunk_model.hpp  chat_response_model.hpp  combined_metrics_response_model.hpp  completion_metrics_response_model.hpp  completion_request_model.hpp  completion_response_chunk_model.hpp  completion_response_model.hpp  engine_status_request_model.hpp  engine_status_response_model.hpp  model_interface.hpp  remove_engine_request_model.hpp  remove_engine_response_model.hpp  system_metrics_response_model.hpp
include/kolosal/retrieval/: add_document_types.hpp  add_documents_route.hpp  document_service.hpp  parse_documents.hpp  parse_docx.hpp  remove_documents_route.hpp
include/kolosal/routes/: add_documents_route.hpp  add_engine_route.hpp  agents_route.hpp  auth_config_route.hpp  auto_setup_route.hpp  cancel_all_downloads_route.hpp  cancel_download_route.hpp  chat_completion_route.hpp  combined_metrics_route.hpp  completion_metrics_route.hpp  completion_route.hpp  download_progress_route.hpp  downloads_status_route.hpp  engine_status_route.hpp  health_status_route.hpp  inference_chat_completion_route.hpp  inference_completion_route.hpp  list_engines_route.hpp  models_route.hpp  orchestration_route.hpp  remove_engine_route.hpp  retrieve_route.hpp  route_interface.hpp  sequential_workflow_route.hpp  system_metrics_route.hpp
include/models/: chat_message_model.hpp  chat_request_model.hpp  chat_response_chunk_model.hpp  chat_response_model.hpp  greet_request_model.hpp  greet_response_model.hpp  model_interface.hpp
include/routes/: chat_completion_route.hpp  greet_route.hpp  route_interface.hpp
src/: auto_setup_manager.cpp  completion_monitor.cpp  document_service.cpp  download_manager.cpp  download_utils.cpp  enhanced_gpu_monitor.cpp  inference.cpp  logger.cpp  main.cpp  metrics_converter.cpp  node_manager.cpp  qdrant_client.cpp  server.cpp  server_api.cpp  server_config.cpp  server_main.cpp  system_monitor.cpp
src/agents/: agent_core.cpp  agent_data.cpp  agent_interfaces.cpp  agent_orchestrator.cpp  builtin_functions.cpp  event_system.cpp  function_manager.cpp  job_manager.cpp  logger.cpp  message_router.cpp  multi_agent_system.cpp  sequential_workflow.cpp  yaml_config.cpp
src/auth/: auth_middleware.cpp  cors_handler.cpp  rate_limiter.cpp
src/models/: add_documents_model.cpp
src/retrieval/: add_document_types.cpp  document_service.cpp  parse_documents.cpp  parse_docx.cpp  remove_documents_route.cpp
src/routes/: add_documents_route.cpp  add_engine_route.cpp  agents_route.cpp  auth_config_route.cpp  auto_setup_route.cpp  cancel_all_downloads_route.cpp  cancel_download_route.cpp  chat_completion_route.cpp  combined_metrics_route.cpp  completion_metrics_route.cpp  completion_route.cpp  download_progress_route.cpp  downloads_status_route.cpp  embedding_route.cpp  engine_status_route.cpp  greet_route.cpp  health_status_route.cpp  inference_chat_completion_route.cpp  inference_completion_route.cpp  list_engines_route.cpp  models_route.cpp  orchestration_route.cpp  parse_pdf_route.cpp  remove_engine_route.cpp  retrieve_route.cpp  sequential_workflow_route.cpp  system_metrics_route.cpp
